--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Ishaaq Ibrahim</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Arapey|Gochi+Hand|Playfair+Display+SC&display=swap" rel="stylesheet">
 </head>
@@ -13,8 +13,8 @@
         <h1>Ishaaq Ibrahim</h1>
 
         <p class = "intro">
-            Welcome! My name is Ishaaq Ibrahim. I am a senior at the University of Maryland, College Park studying Information Science with a focus on Data Science. My expected
-            graduation date is December 2019. I am interested in Software Engineering and Data Science positions and have experience with both. Check out the links below to find out more about me!
+            Welcome! My name is Ishaaq Ibrahim. I am a Technical Consultant at Adobe for Adobe Analytics and Adobe Target. I graduated with a B.S. in Information Science with a Data Science concentration
+            from the University of Maryland, College Park. I am passionate about Data Analytics and UX/UI Design and research. Explore the icons below to learn more about me!
         </p>
 
         <div class = "buttons">
